

Name: Harmoni ChangeLog


v. 0.10.0 (2007-04-05)
----------------------------------------------------
		
	* New feature: GUI: Now 'placeholders' can be added to containers to provide support for out-of-order addition of components. (Adam Franco)
		
	* New feature: Utilities: StatusStars can now be used from a CLI environment. (Adam Franco)
		
	* New feature: DBHandler: Added methods to query objects allow the addition of values to queries without requiring the user to add quotes and escaping. Quoting and escaping is handled withing these methods. (Adam Franco)
		
	* New feature: Authorization: Added isAuthorizedBelow() and isUserAuthorizedBelow() methods to allow determination as to the availibility of the contents of a node. (Adam Franco)
		
	* New feature: Repository: Added an assetExists() method. (Adam Franco)
		
	* Bug Fix: Chronology: Now gets AM/PM correct for 12AM and 12PM (Adam Franco)
		
	* Change: RequestContext: Now doesn't add cookie values to the request parameters. (Adam Franco)
		
	* Change: RequestContext: Now doesn't add the module and action to the list of passed parameters. (Adam Franco)
		
	* Bug Fix: Agent: Removed debugging lines from Group implementation (Adam Franco)
	
v. 0.9.0 (2006-12-13)
----------------------------------------------------
		
	* New feature: AuthN: Added support for administrators to act as another user. (Adam Franco)
		
	* Bug Fix: AuthN: Fixed LDAP dnExists() method to work. (Adam Franco)
		
	* New feature: AuthN: Added support for LDAP Group searching. (Adam Franco)
		
	* New feature: Repository: Added support for files stored at remote locations. (Adam Franco)
		
	* Bug Fix: AuthZ: Increased the column length of the authorization agent Id to prevent long LDAP DNs from being truncated. (Adam Franco)
		
	* Bug Fix: Tagging: Tags could be accidentally added with no value, now cannot. (Adam Franco)
		