@@ -25,6 +25,9 @@
 <h2>Version 0.10.0</h2>
 <h3>2007-04-05</h3>
 <ul>
+		<li> Bug Fix:  
+			Architecture: Improved debug output on Harmoni instantiation errors.
+		 (<em>Adam Franco</em>)</li>
 		<li> New feature:  
 			GUI: Now 'placeholders' can be added to containers to provide support
 			for out-of-order addition of components.
