@@ -3,12 +3,15 @@
  @package harmoni.docs
  @copyright Copyright &copy; 2005, Middlebury College
  @license http://www.gnu.org/copyleft/gpl.html GNU General Public License (GPL)
- @version $Id: changelog.xml,v 1.142 2007/04/05 15:56:23 adamfranco Exp $
+ @version $Id: changelog.xml,v 1.143 2007/04/05 18:18:48 adamfranco Exp $
  -->
 <!DOCTYPE changelog SYSTEM "../dtds/changelog.dtd">
 
 <changelog name="Harmoni ChangeLog">
 	<version number="0.10.0" date="2007-04-05">
+		<fix author='adam'>
+			Architecture: Improved debug output on Harmoni instantiation errors.
+		</fix>
 		<new author='adam'>
 			GUI: Now 'placeholders' can be added to containers to provide support
 			for out-of-order addition of components.
